--- a/photos.html
+++ b/photos.html
@@ -161,22 +161,22 @@
     <div class="grid">
       <img src="pimages/p1.jpg" class="photo">
       <img src="pimages/p2.jpg" class="photo">
-      <img src="pimages/p3.jpg" class="photo">
+      <img src="videos/p4.jpg" class="photo">
       <img src="pimages/p4.jpg" class="photo">
       <img src="pimages/p5.jpg" class="photo">
       <img src="pimages/p6.jpg" class="photo">
-      <img src="pimages/p7.jpg" class="photo">
+      <img src="videos/p1.jpg" class="photo">
       <img src="pimages/p8.jpg" class="photo">
       <img src="pimages/p9.jpg" class="photo">
-      <img src="pimages/p10.jpg" class="photo">
+      <img src="videos/p3.jpg" class="photo">
       <img src="pimages/p11.jpg" class="photo">
       <img src="pimages/p12.jpg" class="photo">
+      <img src="pimages/p13.jpg" class="photo">
+      <img src="videos/p2.jpg" class="photo">
+      <img src="pimages/p7.jpg" class="photo">
       <img src="pimages/p10.jpg" class="photo">
-      <img src="pimages/p11.jpg" class="photo">
-      <img src="pimages/p12.jpg" class="photo">
-      <img src="pimages/p10.jpg" class="photo">
-      <img src="pimages/p11.jpg" class="photo">
-      <img src="pimages/p12.jpg" class="photo">
+      <img src="pimages/p14.jpg" class="photo">
+      <img src="pimages/p3.jpg" class="photo">
     </div>
     <div class="photo-count">1,107장의 사진, 23개의 비디오</div>
   </div>
