--- a/photos.html
+++ b/photos.html
@@ -161,18 +161,18 @@
     <div class="grid">
       <img src="pimages/p1.jpg" class="photo">
       <img src="pimages/p2.jpg" class="photo">
-      <img src="videos/p4.jpg" class="photo">
+      <img src="videos/p4.MP4" class="photo">
       <img src="pimages/p4.jpg" class="photo">
       <img src="pimages/p5.jpg" class="photo">
       <img src="pimages/p6.jpg" class="photo">
-      <img src="videos/p1.jpg" class="photo">
+      <img src="videos/p1.MP4" class="photo">
       <img src="pimages/p8.jpg" class="photo">
       <img src="pimages/p9.jpg" class="photo">
-      <img src="videos/p3.jpg" class="photo">
+      <img src="videos/p3.MP4" class="photo">
       <img src="pimages/p11.jpg" class="photo">
       <img src="pimages/p12.jpg" class="photo">
       <img src="pimages/p13.jpg" class="photo">
-      <img src="videos/p2.jpg" class="photo">
+      <img src="videos/p2.MP4" class="photo">
       <img src="pimages/p7.jpg" class="photo">
       <img src="pimages/p10.jpg" class="photo">
       <img src="pimages/p14.jpg" class="photo">
